telas de auth e iniciando firebase

--- a/src/app/pages/home/components/section-contents/section-contents.component.html
+++ b/src/app/pages/home/components/section-contents/section-contents.component.html
@@ -2,13 +2,17 @@
   <div class="title">
     <h2>conteúdos</h2>
   </div>
-  <swiper-container appSwiper #swiper [config]="swiperConfig" >
-    @for (item of [].constructor(5); track $index) {
-      <swiper-slide swiper-slide>
-        <div class="card">
-          <div class="content"></div>
-        </div>
-      </swiper-slide>
-    }
-  </swiper-container>
+  <div class="slide">
+    <div class="shadow"></div>
+    <swiper-container appSwiper #swiper [config]="swiperConfig" >
+      @for (item of [].constructor(5); track $index) {
+        <swiper-slide swiper-slide>
+          <div class="card">
+            <div class="content"></div>
+          </div>
+        </swiper-slide>
+      }
+    </swiper-container>
+  </div>
+
 </section>
