--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,6 +1,8 @@
 ion-content {
-  --background: #0b0b0b;
-  --padding-start: 16px;
-  --padding-top: 16px;
+  --background: var(--background-color);
+  --padding-start: 32px;
+  --padding-top: 32px;
+  --padding-bottom: 32px;
+
 
 }
