--- a/src/app/pages/home/components/header/header.component.scss
+++ b/src/app/pages/home/components/header/header.component.scss
@@ -20,15 +20,16 @@ ion-header {
     }
 
     ion-menu-button {
-      --color: #fff;
+      --color: var(--secondary-color);
     }
 
     ion-img {
       &.logo {
         &::part(image) {
-          width: 120px;
+          width: 100px;
         }
       }
+
       &.profile {
         &::part(image) {
           width: 80px;
@@ -56,7 +57,7 @@ ion-header {
         h4 {
           font-size: 18px;
           font-weight: 700;
-          color: #fff;
+          color: var(--secondary-color);
         }
 
          p {
@@ -73,12 +74,12 @@ ion-header {
       box-shadow: -2px 1px 3px #000;
       position: relative;
       ion-icon {
-        color: #ee7209;
+        color: var(--primary-color);
         font-size: 14px;
       }
       .badge {
         background: rgb(111, 240, 201);
-        color: #fff;
+        color: var(--secondary-color);
         font-size: 8px;
         border-radius: 50%;
         height: 12px;
@@ -96,7 +97,7 @@ ion-header {
 
       gap: 10px;
 
-      color: #ee7209;
+      color: var(--primary-color);
       background-color: rgb(22, 22, 22);
       padding: 10px 16px;
       border-radius: 40px;
@@ -112,12 +113,13 @@ ion-header {
         text-transform: uppercase;
         font-weight: 500;
         letter-spacing: -1.28px;
+        white-space: nowarp;
       }
 
       ion-icon {
         font-size: 10px;
         padding: 2px;
-        border: 1px solid #ee7209;
+        border: 1px solid var(--primary-color);
         border-radius: 50%;
       }
     }
