--- a/src/app/pages/home/components/section-personal-online/section-personal-online.component.scss
+++ b/src/app/pages/home/components/section-personal-online/section-personal-online.component.scss
@@ -9,14 +9,14 @@ section {
   .title {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
 
     margin-bottom: 20px;
     ion-icon {
-      color: #ee7209;
+      color: var(--primary-color);
       padding: 4px;
       border-radius: 50%;
-      border: 1px solid #ee7209;
+      border: 1px solid var(--primary-color);
     }
   }
 
@@ -26,7 +26,7 @@ section {
     height: 140px;
     width: 100%;
     border-radius: 12px;
-    background-blend-mode: darken; 
+    background-blend-mode: darken;
     &.label {
       display: flex;
       flex-direction: column;
@@ -53,7 +53,7 @@ section {
       }
 
       ion-icon {
-        border: 1px solid #fff;
+        border: 1px solid var(--secondary-color);
         padding: 8px;
         font-size: 20px;
         border-radius: 50%;
@@ -66,4 +66,15 @@ section {
     }
   }
 
+  .slide {
+    position: relative;
+    .shadow {
+      background: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9) 70%);
+      height: 140px;
+      width: 30px;
+      position: absolute;
+      right: 0;
+      z-index: 1000;
+    }
+  }
 }
