--- a/src/app/pages/home/components/section-program/section-program.component.html
+++ b/src/app/pages/home/components/section-program/section-program.component.html
@@ -3,19 +3,23 @@
     <h2>programas</h2>
     <div class="tag">novo</div>
   </div>
-  <swiper-container appSwiper #swiper [config]="swiperConfig" >
-    @for (item of cards; track $index) {
-      <swiper-slide swiper-slide>
-        <div class="card label"
-          [ngStyle]="{'background': getImage(item)}"
-          style="background: url('assets/card.jpeg') center/cover no-repeat, rgba(0, 0, 0, 0.6);"
-        >
-        @if (item.isActive) {
-          <p>continuar treinando</p>
-        }
-        <h2>{{ item.title }}</h2>
-        </div>
-      </swiper-slide>
-    }
-  </swiper-container>
+  <div class="slide">
+    <div class="shadow"></div>
+    <swiper-container appSwiper #swiper [config]="swiperConfig" >
+      @for (item of cards; track $index) {
+        <swiper-slide swiper-slide>
+          <div class="card label"
+            [ngStyle]="{'background': getImage(item)}"
+            style="background: url('assets/card.jpeg') center/cover no-repeat, rgba(0, 0, 0, 0.6);"
+          >
+          @if (item.isActive) {
+            <p>continuar treinando</p>
+          }
+          <h2>{{ item.title }}</h2>
+          </div>
+        </swiper-slide>
+      }
+    </swiper-container>
+  </div>
+
 </section>
