--- a/src/app/pages/home/components/section-program/section-program.component.scss
+++ b/src/app/pages/home/components/section-program/section-program.component.scss
@@ -12,11 +12,11 @@ section {
     align-items: center;
     gap: 10px;
 
-    margin: 20px 0;
+    margin: 40px 0 20px;
 
     .tag {
-      background: #ee7209;
-      color: #fff;
+      background: var(--primary-color);
+      color: var(--secondary-color);
       font-weight: 700;
       font-size: 10px;
       margin: 0;
@@ -48,7 +48,7 @@ section {
     padding: 10px;
     p {
       margin: 0 0 8px;
-      color: #ee7209;
+      color: var(--primary-color);
       text-transform: lowercase;
       font-weight: 600;
       font-size: 14px;
@@ -59,5 +59,18 @@ section {
       margin: 0;
     }
   }
+
+  .slide {
+    position: relative;
+    .shadow {
+      background: linear-gradient(to right, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.9) 70%);
+      height: 140px;
+      width: 30px;
+      position: absolute;
+      right: 0;
+      z-index: 1000;
+    }
+  }
+
 
 }
