--- a/src/global.scss
+++ b/src/global.scss
@@ -39,3 +39,17 @@
 * {
   font-family: 'Inter', sans-serif;
 }
+
+.btn {
+  --background: var(--primary-color);
+  --color: var(--secondary-color);
+  --border-radius: 4px;
+  width: 100%;
+  --background-activated: red !important;
+  --background-activated-opacity: .2;
+}
+
+.custom-toast {
+  --color: var(--primary-color);
+  --background: var(--background-color);
+}
