sistema de autenticação

--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -16,5 +16,5 @@
     />
     <ion-button class="btn" (click)="submit()">Entrar</ion-button>
   </form>
-  <a>Não tem conta? <strong>Crie uma</strong></a>
+  <a>Não tem conta? <strong (click)="register()">Crie uma</strong></a>
 </ion-content>
