finalização do sistema de autenticação e inicio do sistema de programas de treinamento

--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -36,5 +36,5 @@
     />
     <ion-button class="btn" (click)="submit()">Criar</ion-button>
   </form>
-  <a>Ja tem conta? <strong>Entrar</strong></a>
+  <a>Ja tem conta? <strong (click)="login()">Entrar</strong></a>
 </ion-content>
