--- a/src/app/pages/home/components/header/header.component.scss
+++ b/src/app/pages/home/components/header/header.component.scss
@@ -5,7 +5,7 @@
 
 ion-header {
   .wrapper {
-    background-color: rgb(29, 29, 29);
+    background-color: var(--header-background);
     min-height: 200px;
     border-radius: 0 0 15% 15%;
     padding: 16px;
